# grocery-to-json

./: .gitignore  Cargo.toml  README.md  edit.txt  original.txt  res.txt
benches/: costants.rs  image_processors.rs  tesseract_bench.rs
src/: aldi.rs  dao.rs  giant.rs  grocery_list.rs  imageproc.rs  integration_test.rs  lib.rs  main.rs  reciept.rs  tesseract.rs  whole_foods.rs
src/api/: central.rs  mod.rs  test.rs
src/dao/: image_dao.rs  interfaces.rs  mod.rs  models.rs  mongo.rs  raw_text_dao.rs  reciept_dao.rs
src/image_processors/: hough_transform.rs  mod.rs  sobel_transform.rs  tesseract_processor.rs
src/image_processors/operations/: sobel_transform.rs
src/processors/: mod.rs  wholefoods_processor.rs
src/text_processors/: aldi_processor.rs  generic_proc.rs  generic_processor.rs  mod.rs  whole_foods_processor.rs  wholefoods_processor.rs
